<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login_Text">Login</string>
    <string name="Password_Text">Password</string>d
    <string name="radio_text">RadioButton</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="switch_text">What does this do?</string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">Do you want to finish?</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startChatBt">Start Chat</string>
    <string name="editText">Edit Text</string>
    <string name="sendButton">Send</string>
    <string name="newText">new text</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="text_toolbar">Tool Bar</string>
    <string name="item_one">One</string>
    <string name="item_two">Two</string>
    <string name="item_three">Three</string>
    <string name="dialog_tittle">Do you want to go back?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="dialog3_message">What is your new message?</string>
    <string name="dialog3_edit_text">Type here</string>
    <string name="item_about">About</string>


</resources>
